--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-face_recognition==1.3.0
-numpy==1.20.3
-opencv_python==4.5.2.52
 mss==6.1.0
+opencv_python==4.5.2.52
+screeninfo==0.6.7
+numpy==1.20.3
+face_recognition==1.3.0
