fixed enabled can't use gpu

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 videos/test.mp4
+videos/upscaled_edsr_x4.mp4
+videos/upscaled_espcn_x4.mp4
+videos/upscaled_lapsrn_x4.mp4
+videos/upscaled_lapsrn_x8.mp4
