--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ videos/upscaled_edsr_x4.mp4
 videos/upscaled_espcn_x4.mp4
 videos/upscaled_lapsrn_x4.mp4
 videos/upscaled_lapsrn_x8.mp4
+videos/test_hd.mp4
+videos/test_long.mp4
+videos/out/test_hd.mp4
+videos/out/test.mp4
+temp.mp4
